--- a/labs/lab-01.qmd
+++ b/labs/lab-01.qmd
@@ -522,3 +522,7 @@ You will receive feedback on Lab 01, particularly on the computing review exerci
 Each assignment will have a portion associated with "Workflow & formatting". This grade is to assess the reproducible workflow and document format. This includes having at least 3 informative commit messages, a neatly organized document with readable code and your name and the date updated in the YAML.
 
 You will receive feedback about "Workflow & formatting" for this lab, so you know what to expect for grading in future assignments. It will not count towards the grade in Lab 01.
+
+<hr>
+
+*This assignment was written in collaboration with Kat Husar, a PhD student in Statistical Science at Duke University.*
