--- a/ae/ae-01-model-assessment.qmd
+++ b/ae/ae-01-model-assessment.qmd
@@ -13,9 +13,13 @@ bibliography: references.bib
 ::: callout-important
 Go to the [course GitHub organization](https://github.com/sta221-fa24) and locate your `ae-01` repo to get started.
 
+If you do not see an `ae-01` repo, use the link below to create one:
+
+<https://classroom.github.com/a/6jpkfA8n>
+
 Render, commit, and push your responses to GitHub by the end of class to submit your AE.
 
-<!--# ADD LINK TO MAKE REPO IF THEY DON'T HAVE IT-->\
+\
 \
 **This AE will not count towards your participation grade.**
 :::
