--- a/slides/03-slr-model-assessment.qmd
+++ b/slides/03-slr-model-assessment.qmd
@@ -430,6 +430,10 @@ $$
 \end{aligned}
 $$
 
+::: aside
+[Click here](https://introregression.netlify.app/98-appendix#sum-of-squares) to see why this equality holds.
+:::
+
 ## $R^2$
 
 The **coefficient of determination** $R^2$ is the proportion of variation in the response, $Y$, that is explained by the regression model
