add hw 01 draft.

--- a/labs/references.bib
+++ b/labs/references.bib
@@ -57,3 +57,10 @@
   year={2019},
   publisher={International Journal of Intelligent Systems and Applications in Engineering}
 }
+
+@book{montgomery2021introduction,
+  title={Introduction to linear regression analysis},
+  author={Montgomery, Douglas C and Peck, Elizabeth A and Vining, G Geoffrey},
+  year={2021},
+  publisher={John Wiley \& Sons}
+}
